--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "fp-ts": "^2.13.1",
     "graphology": "^0.25.1",
+    "graphology-gexf": "^0.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
