--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:serve": "yarn serve dist",
     "watch": "webpack --watch",
     "serve": "webpack serve",
+    "cli": "ts-node-esm src/cli.ts",
     "start": "yarn serve",
     "test": "jest",
     "test:ci": "yarn build && yarn test",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/sigmajs": "^1.0.28",
@@ -39,6 +41,7 @@
     "style-loader": "^3.3.1",
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
