--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chrom-graph",
   "packageManager": "yarn@3.3.1",
+  "type": "module",
   "scripts": {
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
@@ -8,7 +9,7 @@
     "build:serve": "yarn serve dist",
     "watch": "webpack --watch",
     "serve": "webpack serve",
-    "cli": "ts-node-esm src/cli.ts",
+    "cli": "tsc && node build/cli.js",
     "start": "yarn serve",
     "test": "jest",
     "test:ci": "yarn build && yarn test",
@@ -40,6 +41,7 @@
     "serve": "^14.2.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^29.0.5",
+    "ts-jest-resolver": "^2.0.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
