--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "packageManager": "yarn@3.3.1",
   "type": "module",
   "scripts": {
-    "build": "webpack --mode=production --node-env=production",
+    "build": "yarn cli && webpack --mode=production --node-env=production && rm -rf dist/graphdata && cp -rp public/graphdata dist/graphdata",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "build:serve": "yarn serve dist",
     "watch": "webpack --watch",
-    "serve": "webpack serve",
+    "serve": "yarn cli && webpack serve",
     "cli": "tsc && node build/cli.js",
     "start": "yarn serve",
     "test": "jest",
