fix docker+gitpod better

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cli": "tsc && node build/cli.js",
     "start": "yarn serve",
     "test": "jest",
-    "test:ci": "yarn build && yarn test",
+    "test:ci": "yarn cli && yarn build && yarn test",
     "docker": "docker buildx build -t ghcr.io/erosson/chrom-graph:latest .",
     "docker:buildrun": "yarn docker && yarn docker:run",
     "docker:run": "docker run -p 8000:80 -it ghcr.io/erosson/chrom-graph:latest"
