run minisat, display colors

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:serve": "yarn serve dist",
     "watch": "webpack --watch",
     "serve": "ls public/graphdata && webpack serve",
-    "cli": "tsc && node build/cli.js",
+    "cli": "tsc && node build/cli.js && yarn sat",
+    "sat": "./scripts/sat.sh",
     "start": "yarn serve",
     "test": "jest",
     "test:ci": "yarn cli && yarn build && yarn test",
